--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     var h = document.body.clientHeight;
     var pagewidth = w - 110;
     var pageheight = h - 100;
-
+    window.addEventListener("keydown", Control);
     // taking input from the keyboard for bird movement (w,a,s,d are the controls i have taken)
 
     function Control() {
